# DART-Pipeline

./: .dockerignore  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.dev.md  README.md  README.rst  RUNTIMES.md  RUNTIMES.txt  Snakefile  TODO.md  build_docker.sh  config.sh  config.sh.bkup  index.txt  noxfile.py  pyproject.toml  regions.toml  test_cli.sh
.github/ISSUE_TEMPLATE/: new-metric.md
.github/workflows/: docker.yml  ghcr-image.yml  python-app.yml  scripts.yml  tests.yml
A Collate Data/: collate_data.py  requirements.txt  test_collate_data.py  test_utils.py  utils.py
B Process Data/: process_data.py  requirements.txt  test_process_data.py  test_utils.py  utils.py
codes/: relative_wealth_index_processing_and_aggregation.py  relative_wealth_index_processing_and_plotting.py
data/: VNM_relative_wealth_index.csv
data/VNM/geoboundaries/: geoBoundaries-VNM-ADM1-metaData.json  geoBoundaries-VNM-ADM1-metaData.txt  geoBoundaries-VNM-ADM1.topojson  geoBoundaries-VNM-ADM1_simplified.topojson  (+4 more)
deploy/: README.md  start.sh  start_dev.sh
deploy/schema/: __init__.py  base.py  climate.py  epi.py
deploy/service/: docker-compose.yml
dev/: README.md
docs/: conf.py  geospatial.md  index.md  metrics.md  metrics.rst  overview.md  reference.rst  schema.md  setup.md  standardised_indices.md
docs/metrics/: economic.md  epidemiological.md  geospatial.md  index.md  meteorological.md  sociodemographic.md
docs/reference/: custom_metrics.md  storage_conventions.md
docs/source/: conf.py  index.rst
docs/workflow/: bias_correction.md  configuration.md  fetching_data.md  forecast.md  processing_data.md  relative_wealth_index.md  using_custom_shapefiles.md  validation.md
gui/: Main Page.py  types.py  utils.py
gui/pages/: 1_1. Configuration.py  2_2. Fetching data.py  3_3. Bias correction.py
scripts/: fetch_weather.sh  meta.sh  perform_bias_correction.sh  process_weather.sh  process_wrf_downscale.sh  test_urls.sh
src/dart_pipeline/: INDEX.md  __init__.py  __main__.py  collate.py  collate_api.py  constants.py  paths.py  plots.py  process.py  types.py  util.py
tests/: INDEX.md  test_collate.py  test_collate_api.py  test_economic_relative_wealth-index.py  test_geospatial_aphroditeprecipitation.py  test_geospatial_aphroditetemperature.py  test_geospatial_era5reanalysis.py  test_geospatial_gadm.py  test_geospatial_relative_wealth-index.py  test_geospatial_worldpop_count.py  test_geospatial_worldpop_density.py  test_meta_relative_wealth-index.py  test_meteorological_aphroditeprecipitation.py  test_meteorological_aphroditetemperature.py  test_meteorological_era5reanalysis.py  test_plots.py  test_population_weighted_relative_wealth-index.py  test_process.py  test_sociodemographic_worldpop_count.py  test_sociodemographic_worldpop_density.py  test_util.py
tests/__snapshots__/: test_process.ambr
tests/data/: VNM-2-2020-era5.2m_temperature.daily_max.nc  VNM-2-2020-era5.2m_temperature.daily_mean.nc  VNM-2-2020-era5.2m_temperature.daily_min.nc  VNM-2-2020-era5.hydrological_balance.daily_sum.nc  VNM-2-2020-era5.relative_humidity.daily_max.nc  VNM-2-2020-era5.relative_humidity.daily_mean.nc  VNM-2-2020-era5.relative_humidity.daily_min.nc  VNM-2-2020-era5.specific_humidity.daily_max.nc  VNM-2-2020-era5.specific_humidity.daily_mean.nc  VNM-2-2020-era5.specific_humidity.daily_min.nc  VNM-2-2020-era5.surface_solar_radiation_downwards.daily_sum.nc  VNM-2-2020-era5.total_precipitation.daily_sum.nc
tests/geospatial/: test_worldpop_count.py
tests/meteorological/: test_era5reanalysis.py
tests/metrics/: test_chirps.py  test_meta_relative_wealth_index.py  test_metrics.py  test_peru_dengue.py  test_worldpop.py
tests/sociodemographic/: test_worldpop_count.py
tests/webarchive/: relative-wealth-index.html  vietnam-high-resolution-population-density-maps-demographic-estimates.html
(+84 files in other folders)
