[project]
name = "dart-pipeline"
version = "0.1.0"
description = "Dengue Advanced Readiness Tools (DART) pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4==4.*",
    "cdsapi==0.7.5",
    "contextily==1.6.0",
    "geoglue",
    "geopandas>1",
    "lxml==4.9.*",
    "matplotlib>=3.9.2",
    "metpy>=1.6.3",
    "netCDF4>=1.7.2",
    "openpyxl==3.1.*",
    "pandarallel>=1.6.5",
    "pandas>=2.2",
    "py7zr==0.20.6",
    "pycountry==24.6.1",
    "pyquadkey2>0.3.0",
    "rasterio==1.*",
    "requests>=2",
    "shapely>2.0.5",
]
scripts = { dart-pipeline = "dart_pipeline:main" }

[project.optional-dependencies]
test = [
    "freezegun==0.3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
no_implicit_optional = true
ignore_missing_imports = true

[tool.uv]
dev-dependencies = [
    "myst-parser>=4.0.0",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.2",
    "requests-mock>=1.12.1",
    "sphinx-book-theme>=1.1.3",
    "sphinx>=8.1.3",
]

[tool.uv.sources]
geoglue = { git = "https://github.com/kraemer-lab/geoglue" }

[tool.coverage.run]
omit = ["tests/*"]
