[project]
name = "dart-pipeline"
version = "0.1.0"
description = "Dengue Advanced Readiness Tools (DART) pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4==4.*",
    "cdsapi==0.7.5",
    "contextily==1.6.0",
    "ecmwf-opendata>=0.3.19",
    "filelock>=3.20.3", # required by xclim
    "fonttools>=4.60.2", # required by matplotlib
    "geoglue",
    "geopandas>=1.1.2",
    "lxml>4",
    "matplotlib>=3",
    "metpy>=1.6.3",
    "netCDF4>=1.7.2",
    "openpyxl==3.1.*",
    "pandas>=2.2",
    "pycountry==24.6.1",
    "pyplotsixel>=0.2.1",
    "pyquadkey2>0.3.0",
    "rasterio==1.*",
    "requests>=2.32.4",
    "shapely>2.0.5",
    "urllib3>=2.6.3",
    "xclim>=0.56.0",
]
scripts = { dart-pipeline = "dart_pipeline:main" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
no_implicit_optional = true
ignore_missing_imports = true

[dependency-groups]
dev = [
    "myst-parser>=4.0.0",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.2",
    "requests-mock>=1.12.1",
    "sphinx-book-theme>=1.1.3",
    "sphinx>=8.1.3",
    "jinja2>=3.1.6",  # required by myst-parser
    "pytest-xdist>=3.6.1",
    "freezegun>=1.5",
    "ipykernel>=6.29.5",
    "sphinxcontrib-mermaid>=1.0.0",
]

[tool.uv.sources]
geoglue = { git = "https://github.com/kraemer-lab/geoglue", rev = "3db42f48a519c6fe85837609c27a36033e9d753d" }

[tool.coverage.run]
omit = ["tests/*"]
